// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnGroup 1 1`] = `
<div
  class="btn-group"
  role="group"
>
  <button
    class="btn btn-secondary left"
    type="button"
  >
    Left
  </button>
  <button
    class="btn btn-secondary right"
    type="button"
  >
    Right
  </button>
</div>
`;

exports[`BtnGroup 1 2`] = `
<div
  class="btn-group"
  role="group"
>
  <button
    class="btn btn-secondary left active"
    type="button"
  >
    Left
  </button>
  <button
    class="btn btn-secondary right"
    type="button"
  >
    Right
  </button>
</div>
`;

exports[`BtnGroup 1 3`] = `
<div
  class="btn-group"
  role="group"
>
  <button
    class="btn btn-secondary left"
    type="button"
  >
    Left
  </button>
  <button
    class="btn btn-secondary right active"
    type="button"
  >
    Right
  </button>
</div>
`;

exports[`BtnGroup 1 4`] = `
<div
  class="btn-group"
  role="group"
>
  <button
    class="btn btn-secondary left active"
    type="button"
  >
    Left
  </button>
  <button
    class="btn btn-secondary right"
    type="button"
  >
    Right
  </button>
</div>
`;

exports[`BtnGroup 1 5`] = `
<div
  class="btn-group"
  role="group"
>
  <button
    class="btn btn-secondary left active"
    type="button"
  >
    Left
  </button>
  <button
    class="btn btn-secondary right"
    type="button"
  >
    Right
  </button>
</div>
`;
